package com.gary.factory.method;

/**
 * @author gefengming
 * @date 17/5/21
 */
public interface Light {

    public void turnon();

    public void turnoff();
}
